# clipskuy

./: Cargo.toml
src/: clipskuy.rs  main.rs  theme.rs  types.rs  widget.rs  widget_types.rs
src/themes/: mod.rs  theme.rs  types.rs
src/widgets/: clip_detail.rs  clip_item.rs  clipboard.rs  icons.rs  mod.rs
